# game

./: .gitignore  ART-PIPELINE-REWORK.md  BEVY_0.19_FEATURES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LIGHTYEAR_MIGRATION.md  README.md  analytics.local.toml.example  build.rs  cli  clippy.toml  deny.toml  workos.local.toml.example
.cargo/: audit.toml  config.toml
.githooks/: pre-push
.github/assets/: AppIcon.icns
.github/installer/: ashwend-dmg.json  ashwend-entitlements.plist  ashwend.iss
.github/scripts/: comment-pr-coverage.py  coverage-report.py  deploy-hetzner-server.sh  package-release.py  prepare-release.py  release_assets.py  update-release-asset-links.py
.github/workflows/: audit.yml  coverage-report.yml  coverage.yml  deploy-hetzner.yml  quality-gate.yml  release.yml
art/: comfy_gen.py
art/armor/: build_armor.py  render_icons.sh
art/building/: build_door.py  build_pieces.py
art/consumables/: build_consumables.py  render_icons.sh
art/deployables/: build_deployables.py
art/explosives/: build_explosives.py  render_icons.sh
art/held/: build_animatable.py  build_deployable_world.py  build_held.py  gen_candidates.py  gen_meshes.py  make_icon_masters.py  pick_furnace.html  pick_melee.html  preview.html  prompts.json  prompts_tools_shipped.json  selection.json  selection_tools_shipped.json
art/items/building_plan/: building_plan.blend
art/items/crude_furnace/: crude_furnace.blend
art/items/hammer/: hammer.blend
art/items/iron_hatchet/: iron_hatchet.blend  iron_hatchet.blend1
art/items/iron_pickaxe/: iron_pickaxe.blend  iron_pickaxe.blend1
art/items/meteorite/: build_shard.py
art/ore/: build_nodes.py  build_ore.py  gen_candidates.py  gen_meshes.py  patch_prompts.py  prompts.json  selection.json
art/pipeline/: render_turntable.py  retopo_experiment.py
art/ruins/: build_ruins.py
art/textures/: make_detail_textures.py
art/tools/: build_sickle.py  make_tool_textures.py  measure_sickle.py
art/trees/: build_tree.py  build_trees.sh  make_tree_textures.py  measure_tree.py
art/weapons/: build_weapons.py
assets/building/: ceiling_sticks.glb  ceiling_stone.glb  ceiling_wood.glb  doorway_sticks.glb  doorway_stone.glb  doorway_wood.glb  foundation_sticks.glb  foundation_stone.glb  foundation_wood.glb  stairs_sticks.glb  stairs_stone.glb  stairs_wood.glb  wall_sticks.glb  wall_stone.glb  wall_wood.glb  window_wall_sticks.glb  window_wall_stone.glb  window_wall_wood.glb
assets/ruins/: broken_pillar.glb  burnt_barn.glb  burnt_cottage.glb  burnt_farmhouse.glb  burnt_shed.glb  fallen_arch.glb  ruin_cache_chest.glb
assets/shaders/: grass.wgsl  grass_instanced.wgsl  ore_toon.wgsl  terrain.wgsl  toon.wgsl  toon_prepass.wgsl  toon_viewmodel.wgsl
docs/: README.md  architecture.md  art-direction.md  base-building-and-claims.md  build-and-dev.md  chunks-and-aoi.md  cinematic.md  code-style.md  crafting-and-deployables.md  crafting.md  game-design.md  gameplay-gating.md  headless-agent-testing.md  icon-to-model.md  items-and-resources.md  materials.md  meteor-shower.md  movement.md  multiplayer-testing.md  networking.md  profiling.md  pvp-combat.md  pvp.md  rendering-materials.md  replication.md  resource-node-instancing.md  server-authority.md  steam.md  toon-shading.md  ui-and-client.md  updates-and-distribution.md  updates.md  voice.md  worlds-and-saves.md
docs/playbooks/: add-content.md  add-replicated-entity.md  art-pipeline.md
projects/: resource-node-instancing.md
runpod/flash_app/: README.md  image_worker.py  pyproject.toml
scripts/: ashwend-control.py  icon_finalize.py  render_icon.py
src/: app.rs  auth.rs  building.rs  cinematic.rs  cli.rs  combat.rs  console.rs  control_socket.rs  controller.rs  crafting.rs  game_balance.rs  inventory.rs  items.rs  lib.rs  local_crypto.rs  logging.rs  main.rs  net.rs  protocol.rs  resource_nodes.rs  resources.rs  save.rs  server.rs  steam.rs  util.rs  workos_login.rs  world.rs  world_time.rs
src/analytics/: client.rs  config.rs  context.rs  crash.rs  distinct_id.rs  events.rs  mod.rs
src/app/: embedded_assets.rs  scene.rs  state.rs  systems.rs  ui.rs  voice.rs
src/app/ui/: hud.rs  (+32 more)
src/auth/: identity.rs  mod.rs  verify.rs  workos.rs
src/building/: claims.rs  collision.rs  costs.rs  sockets.rs  stability.rs
src/cinematic/: camera.rs  layout.rs  script.rs
src/cli/: multiplayer_test.rs
src/control_socket/: handlers.rs  listener.rs  targeting.rs  wire.rs
src/controller/: collision.rs  grid.rs  mod.rs  movement.rs  tests.rs
src/crafting/: registry.rs  types.rs
src/items/: armor.rs  consumables.rs  deployables.rs  explosives.rs  ids.rs  materials.rs  pickup.rs  ranged.rs  registry.rs  tools.rs  upgrades.rs  visual.rs  weapons.rs
src/net/: channels.rs  client.rs  dedicated.rs  host.rs  tests.rs
src/protocol/: commands.rs  items.rs  layout_tests.rs  math.rs  messages.rs  mod.rs  world.rs  world_map.rs
src/save/: format.rs  listing.rs  mod.rs  store.rs  types.rs  validate.rs
src/server/: building.rs  chunk_manager.rs  cinematic.rs  claim.rs  combat.rs  commands.rs  connection.rs  container_slots.rs  crafting.rs  defuse.rs  deployable_ecs.rs  deployables.rs  dirty_tracked_map.rs  dispatch.rs  door.rs  dropped_item_ecs.rs  dropped_items.rs  entity_index.rs  explosion.rs  furnace.rs  fuse.rs  heal.rs  inventory.rs  lifecycle.rs  loot_bag.rs  loot_bag_ecs.rs  meteor_shower.rs  movement.rs  persistence.rs  player_ecs.rs  projectile_ecs.rs  projectiles.rs  queries.rs  resource_node_ecs.rs  resource_nodes.rs  ruin_cache.rs  sleeping_bag.rs  stability.rs  storage_box.rs  swing.rs  (+11 more)
src/update/: apply.rs  asset.rs  download.rs  github.rs  mod.rs  skipped.rs  version.rs
src/util/: fs.rs  hash.rs  platform.rs  variation.rs
src/world/: chunk.rs  map_texture.rs  meteor_shower.rs  mod.rs  ruins.rs  terrain_texture.rs  test_world.rs
website/: .cta.json  .env.example  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
website/public/: 404.html  _headers  _redirects  install.sh  llms.txt  robots.txt  sitemap.xml
website/src/: styles.css  vite-env.d.ts
(+407 files in other folders)
