[package]
name = "game"
version = "0.11.0"
edition = "2024"
rust-version = "1.94"
default-run = "game"

[features]
default = []
steam = ["lightyear/steam"]
# Dev-only. Speeds up local iteration; do not enable for release builds.
dev-fast = ["bevy/dynamic_linking"]
# Dev-only diagnostic. Logs every server-side mutation of replicated
# resource-node components and every client-side reception of the same.
# Used to verify whether Lightyear's per-component replication path is
# actually delivering updates after the initial spawn. Off by default —
# the logs are noisy enough to obscure real signal under normal play.
replication-trace = []
# Dev-only. Emits a Chrome tracing JSON (`trace-<unix-ms>.json` in cwd) with
# per-system, per-schedule, and render-pass spans, plus enables extra runtime
# diagnostics (FPS/frame time/entity count/CPU/RAM) logged to stdout. Use via
# `./cli profile` and feed the resulting trace into chrome://tracing or
# ui.perfetto.dev. Do not enable for release builds — tracing has a perf
# cost and the trace file grows fast.
profile = ["bevy/trace_chrome"]

[dependencies]
anyhow = "1.0.102"
bevy = { version = "0.18.1", features = ["mp3", "wav"] }
bevy_egui = "0.39.1"
# Software frame-pacer. Caps the frame rate to the display refresh by
# sleeping on the CPU before each frame is presented. We rely on this
# rather than the GPU's vsync (`PresentMode::Fifo`/`AutoVsync`) because
# macOS Metal's Fifo implementation has long-standing pacing/flicker bugs
# in wgpu — software pacing produces stable frame times where Fifo does
# not. The `framepace_debug` feature would add a debug overlay we don't
# need, so default features are off.
bevy_framepace = { version = "0.21", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
# Cross-platform microphone capture + speaker output for the voice pipeline.
# Pulls native APIs (CoreAudio on darwin, WASAPI on Windows, ALSA on Linux).
cpal = "0.16"
crossbeam-channel = "0.5"
directories = "6.0.0"
# Compile-time tree of `assets/` baked into the binary. The audio system walks
# this at startup to register every shipped sound with Bevy's embedded asset
# source — adding a new clip is now "drop the file in `assets/`", no per-file
# `include_bytes!` row to maintain.
include_dir = "0.7"
lightyear = { version = "0.26.4", default-features = false, features = ["client", "server", "netcode", "udp", "replication"] }
# Opus codec bindings. The system libopus (`brew install opus` /
# `apt install libopus-dev`) is required at build time. Picked over a pure-Rust
# encoder because libopus is the only mature option that hits the
# 24 kbps/wideband quality target.
opus = "0.3"
# Best-effort OS name/version for analytics super properties. Cross-platform,
# pure-Rust, no system deps. ~tiny.
os_info = { version = "3.13", default-features = false }
postcard = { version = "1.1.3", features = ["use-std"] }
rapier3d = "0.32.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
# Hardware fingerprint (CPU brand/cores, RAM total) for analytics. Sampled
# once at startup; the `System` instance is dropped after.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Best-effort UI locale for analytics super properties.
sys-locale = "0.3"
thiserror = "2.0.18"
# Config-file parser for `analytics.local.toml` (gitignored opt-in config
# for the analytics pipeline).
toml = "0.8"
# Blocking HTTP client used by the analytics background worker. Picked over
# `reqwest` because the app has no live tokio runtime — the analytics worker
# is a single OS thread that POSTs in a recv-then-flush loop.
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
zstd = "0.13.3"

# Optimize dependencies (bevy, rapier3d, lightyear) even in dev builds so
# `./cli dev` hits playable frame rates. Our own crate stays at the default
# opt-level so incremental rebuilds remain fast.
[profile.dev.package."*"]
opt-level = 3

# Release profile is for shipped binaries: cross-crate inlining and symbol
# stripping at the cost of a longer link step. ~30% smaller binaries, a few
# percent faster runtime, no PDB/symbols leaked into release tarballs.
# `thin` LTO keeps build times reasonable; `fat` shaves a bit more off but
# multiplies link time. Switch to `fat` only if profiling justifies it.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
