[package]
name = "ashwend"
version = "0.20.0"
edition = "2024"
rust-version = "1.94"
default-run = "ashwend"
license-file = "LICENSE"
publish = false

[features]
default = []
# Dev-only. Speeds up local iteration; do not enable for release builds.
dev-fast = ["bevy/dynamic_linking"]
# Dev-only diagnostic. Logs every server-side mutation of replicated
# resource-node components and every client-side reception of the same.
# Used to verify whether Lightyear's per-component replication path is
# actually delivering updates after the initial spawn. Off by default, 
# the logs are noisy enough to obscure real signal under normal play.
replication-trace = []
# Dev-only. Emits a Chrome tracing JSON (`trace-<unix-ms>.json` in cwd) with
# per-system, per-schedule, and render-pass spans, plus enables extra runtime
# diagnostics (FPS/frame time/entity count/CPU/RAM) logged to stdout. Use via
# `./cli profile` and feed the resulting trace into chrome://tracing or
# ui.perfetto.dev. Do not enable for release builds, tracing has a perf
# cost and the trace file grows fast.
profile = ["bevy/trace_chrome"]

# Lint policy, versioned with the code so every `cargo` invocation and editor
# sees the same bar (CI also runs `cargo clippy -- -D warnings`, which promotes
# every `warn` below to a hard gate). Kept to a curated, high-signal set rather
# than blanket `pedantic`, which is too noisy for Bevy systems with many params.
# `unwrap_used`/`expect_used` are intentionally NOT enabled crate-wide yet (the
# production code has documented-invariant `expect`s that would need individual
# review first); `clippy.toml` already exempts tests so they can be adopted
# later without churning the ~200 test-only unwraps.
[lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
manual_let_else = "warn"
cloned_instead_of_copied = "warn"
unnested_or_patterns = "warn"
# Catch debug scaffolding and unfinished markers before they reach a release
# build. Cheap, high-signal, and zero false positives; CI's `-D warnings`
# promotes these to a hard gate like the rest.
dbg_macro = "warn"
todo = "warn"

[dependencies]
anyhow = "1.0.102"
# PKCE code-challenge + state encoding for the native WorkOS login (RFC 8252).
base64 = "0.22"
# Only `wav` is enabled on top of Bevy's defaults: every shipped clip in
# `assets/` is a `.wav` (decoded via `rodio wav`). We deliberately do NOT
# enable `mp3`, that feature drags in the whole `symphonia-bundle-mp3` decoder
# stack for zero benefit since the game ships no `.mp3`. Re-add `"mp3"` here if
# that ever changes.
bevy = { version = "0.18.1", features = ["wav"] }
bevy_egui = "0.39.1"
# Software frame-pacer. Caps the frame rate to the display refresh by
# sleeping on the CPU before each frame is presented. We rely on this
# rather than the GPU's vsync (`PresentMode::Fifo`/`AutoVsync`) because
# macOS Metal's Fifo implementation has long-standing pacing/flicker bugs
# in wgpu, software pacing produces stable frame times where Fifo does
# not. The `framepace_debug` feature would add a debug overlay we don't
# need, so default features are off.
bevy_framepace = { version = "0.21", default-features = false }
# `Pod`/`Zeroable` derives + byte-casting for the GPU-instanced grass per-blade
# instance buffer (`src/app/scene/grass/instancing.rs`). Already present
# transitively via Bevy; this just makes it a direct dependency.
bytemuck = "1"
# Local at-rest obfuscation for the settings file and the WorkOS refresh-token
# store (see `src/local_crypto.rs`). NOT a security boundary: the seal key is
# baked into the binary; this only keeps those files out of plain text so a
# casual file/process scan can't lift a session token or read the config as a
# string. Pure Rust, no system deps. `alloc` gives the heap encrypt/decrypt
# helpers; the per-write nonce is sliced from a `uuid` (already a dep), so we
# don't pull a separate RNG.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
clap = { version = "4.6.1", features = ["derive"] }
# Cross-platform microphone capture + speaker output for the voice pipeline.
# Pulls native APIs (CoreAudio on darwin, WASAPI on Windows, ALSA on Linux).
cpal = "0.16"
crossbeam-channel = "0.5"
directories = "6.0.0"
# CommonMark renderer for egui. Used by the in-game update modal to render the
# GitHub release notes (changelog since the player's version) as styled
# markdown. Pinned to the 0.22 line because that is the release that targets
# egui ^0.33, which is what `bevy_egui` 0.39 pulls in. `default-features = off`
# drops the optional image/syntax-highlighting backends, our changelog is
# headings, bullet lists, inline code, and links, no images, so we avoid
# dragging in the `image`/`syntect` crates.
egui_commonmark = { version = "0.22", default-features = false }
# Compile-time tree of `assets/` baked into the binary. The audio system walks
# this at startup to register every shipped sound with Bevy's embedded asset
# source, adding a new clip is now "drop the file in `assets/`", no per-file
# `include_bytes!` row to maintain.
include_dir = "0.7"
# Offline JWT verification for WorkOS access tokens on the authoritative server
# (RS256 against the WorkOS JWKS) plus JWK parsing. No secrets needed, the
# server only ever holds the public client id and the public signing keys.
jsonwebtoken = "9.3"
lightyear = { version = "0.26.4", default-features = false, features = ["client", "server", "netcode", "udp", "replication"] }
# Opus codec bindings. The system libopus (`brew install opus` /
# `apt install libopus-dev`) is required at build time. Picked over a pure-Rust
# encoder because libopus is the only mature option that hits the
# 24 kbps/wideband quality target.
opus = "0.3"
# Best-effort OS name/version for analytics super properties. Cross-platform,
# pure-Rust, no system deps. ~tiny.
os_info = { version = "3.13", default-features = false }
postcard = { version = "1.1.3", features = ["use-std"] }
rapier3d = "0.32.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
# Stable account id derived from the WorkOS subject claim (truncated SHA-256),
# so the u64-keyed identity maps and save format stay byte-compatible.
sha2 = "0.10"
# Hardware fingerprint (CPU brand/cores, RAM total) for analytics. Sampled
# once at startup; the `System` instance is dropped after.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
# Best-effort UI locale for analytics super properties.
sys-locale = "0.3"
thiserror = "2.0.18"
# Config-file parser for `analytics.local.toml` (gitignored opt-in config
# for the analytics pipeline).
toml = "0.8"
# Blocking HTTP client used by the analytics background worker. Picked over
# `reqwest` because the app has no live tokio runtime, the analytics worker
# is a single OS thread that POSTs in a recv-then-flush loop.
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }
zstd = "0.13.3"

# Per-OS self-updater archive extractors. The self-updater downloads the host
# platform's release archive and extracts the new game binary from it. macOS
# and Windows ship a `.zip` (the macOS one wraps `Ashwend.app`), so those builds
# need the `zip` reader; Linux ships a `.tar.gz`, so that build needs `flate2` +
# `tar`. Each extractor is gated to the OS that actually consumes it, so no
# platform compiles one it never calls. `zip` runs with `default-features = off`
# + just `deflate`, the only codec `ditto`/the release zips use, which reuses
# the `flate2`/`miniz_oxide` already in the tree.
[target.'cfg(target_os = "macos")'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }
# Used only by the dev-only agent harness to drop the process to a background
# (accessory) app so launching it doesn't steal focus. Versions match what winit
# already pulls in, so this adds no new crates to the build.
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSResponder"] }
objc2-foundation = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
flate2 = "1"
tar = "0.4"

# Optimize dependencies (bevy, rapier3d, lightyear) even in dev builds so
# `./cli dev` hits playable frame rates. Our own crate stays at the default
# opt-level so incremental rebuilds remain fast.
[profile.dev.package."*"]
opt-level = 3

# Release profile is for shipped binaries: cross-crate inlining and symbol
# stripping at the cost of a longer link step. ~30% smaller binaries, a few
# percent faster runtime, no PDB/symbols leaked into release tarballs.
# `thin` LTO keeps build times reasonable; `fat` shaves a bit more off but
# multiplies link time. Switch to `fat` only if profiling justifies it.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
